brat/test/golden/imports/use-illegal-z3.brat
open import lib hiding (z)

main :: Nat, Int, Bool
main = x, y, z
